[package]
name = "tmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tmath_macros = { path = "../tmath_macros" }

num-traits = "0.2.15"

paste = "1.0.7"
rand = "0.8.5"

serde = { version = "1.0.137", features = ["derive"], optional = true }